FIX   removed the horizontal scrollbar when hovering the saved recipes which led to 'bad' zoom in-out effects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,7 @@ button:active {
     font-size: 1.2rem;
     color: #333;
     position: relative;
+    overflow-x: hidden;
 }
 
 .saved-recipes-container ul {
